objects/APTS_ABB_Dimension__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ABB_Dimension_Set__c</fullName>
        <label>ABB Dimension Set</label>
        <referenceTo>APTS_ABB_Dimension_Set__c</referenceTo>
        <relationshipLabel>ABB Dimensions</relationshipLabel>
        <relationshipName>ABB_Dimensions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Hierarchical Level</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Technical_Parameter_API_Name__c</fullName>
        <label>Technical Parameter API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Discrete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ABB Dimension</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_ABB_Dimension_Set__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ABB Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABB Dimensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>